Further text changes

--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -49,7 +49,7 @@
         android:id="@+id/timeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/time" />
+        android:text="@string/reminded" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
