--- a/app/src/main/res/xml/notification_settings.xml
+++ b/app/src/main/res/xml/notification_settings.xml
@@ -20,6 +20,13 @@
         android:summary="@string/override_dnd_summary"
         android:title="@string/override_dnd"
         app:key="override_dnd" />
+    <SwitchPreferenceCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="false"
+        android:summary="@string/override_surface_summary"
+        android:title="@string/override_surface"
+        app:key="override_surface" />
     <Preference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
