--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,21 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/overviewFragment"
+        android:id="@+id/mewOverviewFragment"
+        android:name="com.futsch1.medtimer.new_overview.NewOverviewFragment"
+        android:contentDescription="@string/overview_tab_description"
         android:icon="@drawable/calendar2_event"
-        android:title="@string/tab_overview"
-        android:name="com.futsch1.medtimer.overview.OverviewFragment"
-        android:contentDescription="@string/overview_tab_description"/>
+        android:title="@string/tab_overview" />
     <item
         android:id="@+id/medicinesFragment"
-        android:icon="@drawable/capsule"
-        android:title="@string/tab_medicine"
         android:name="com.futsch1.medtimer.medicine.MedicinesFragment"
-        android:contentDescription="@string/medicines_tab_description"/>
+        android:contentDescription="@string/medicines_tab_description"
+        android:icon="@drawable/capsule"
+        android:title="@string/tab_medicine" />
     <item
         android:id="@+id/statisticsFragment"
-        android:icon="@drawable/bar_chart"
-        android:title="@string/analysis"
         android:name="com.futsch1.medtimer.statistics.StatisticsFragment"
-        android:contentDescription="@string/statistics_tab_description"/>
+        android:contentDescription="@string/statistics_tab_description"
+        android:icon="@drawable/bar_chart"
+        android:title="@string/analysis" />
 </menu>
