Implement layout of overview screen and populate recycler

--- a/app/src/main/res/layout/fragment_new_overview.xml
+++ b/app/src/main/res/layout/fragment_new_overview.xml
@@ -53,11 +53,13 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reminders"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filterButtons" />
+        app:layout_constraintTop_toBottomOf="@id/filterButtons"
+        app:layout_constraintVertical_bias="0" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/logManualDose"
