--- a/app/src/main/res/layout/fragment_new_overview.xml
+++ b/app/src/main/res/layout/fragment_new_overview.xml
@@ -55,7 +55,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reminders"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="4dp"
+        android:clipToPadding="false"
+        android:paddingBottom="60dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filterButtons"
