--- a/app/src/main/res/layout/fragment_new_overview.xml
+++ b/app/src/main/res/layout/fragment_new_overview.xml
@@ -21,6 +21,7 @@
         android:id="@+id/filterButtons"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_marginVertical="2dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,18 +42,19 @@
             app:icon="@drawable/x_circle" />
 
         <Button
+            android:id="@+id/filterRaised"
+            style="@style/Widget.MedTimer.Button.OutlinedButton.IconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon="@drawable/bell" />
+
+        <Button
             android:id="@+id/filterScheduled"
             style="@style/Widget.MedTimer.Button.OutlinedButton.IconOnly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/alarm" />
 
-        <Button
-            android:id="@+id/filterRaised"
-            style="@style/Widget.MedTimer.Button.OutlinedButton.IconOnly"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/bell" />
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
     <androidx.recyclerview.widget.RecyclerView
