--- a/app/src/main/res/layout/sidesheet_edit_event.xml
+++ b/app/src/main/res/layout/sidesheet_edit_event.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Material3.SideSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".overview.EditEventFragment">
+    app:layout_behavior="com.google.android.material.sidesheet.SideSheetBehavior">
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/editEventSideSheetToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:title="@string/edit_event" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
