Minor visual tweaks

--- a/app/src/main/res/layout/fragment_new_overview.xml
+++ b/app/src/main/res/layout/fragment_new_overview.xml
@@ -21,7 +21,8 @@
         android:id="@+id/filterButtons"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginVertical="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
