Implement editing and exporting notes Adapt unit tests

--- a/app/src/main/res/layout/sidesheet_edit_event.xml
+++ b/app/src/main/res/layout/sidesheet_edit_event.xml
@@ -148,7 +148,7 @@
         android:paddingBottom="8dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editNotes"
+            android:id="@+id/editEventNotes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
